fix(css): sidebar/logo/search spacing

--- a/docs/css/tacc-docs.css
+++ b/docs/css/tacc-docs.css
@@ -76,6 +76,25 @@ h4 {
 
 
 
+/* To recolor SVG logo */
+
+/* CAVEAT: Assumes a monochrome design */
+svg.logo [fill]:not([fill="none"]) {
+  fill: var(--global-color-primary--xx-dark);
+}
+
+
+
+/* To define re-usable spacing */
+
+.wy-nav-side {
+  --pad-horz: 25px; /* NOTE: design is 24.5px (left) and 11.5px (right) */
+  --link-pad-vert: 0.375em; /* NOTE: design is 25px */
+  --link-pad-horz: 15px; /* NOTE: design is 13.5px */
+}
+
+
+
 /* To re-color navigation */
 
 .wy-nav-side {
@@ -138,11 +157,7 @@ h4 {
 /* To adapt nav layout to design */
 
 .wy-menu-vertical {
-  --link-pad-vert: 0.375em; /* NOTE: design is 25px */
-  --link-pad-horz: 2em; /* NOTE: design is ??? */
-
-  padding-left: 25px; /* NOTE: design is 24.5px */
-  padding-right: 25px; /* NOTE: design is 11.5px */
+  padding-inline: var(--pad-horz);
   padding-bottom: 25px; /* NOTE: developer addition */
 }
 .wy-menu-vertical a,
@@ -221,7 +236,7 @@ h4 {
 /* To adapt search to design */
 
 .wy-side-nav-search {
-  padding: 40px; /* NOTE: design is 38px 38px 30px 37px */
+  padding: calc( var(--pad-horz) + var(--link-pad-horz) ); /* NOTE: design is 38px 38px 30px 37px */
   margin-bottom: unset; /* undo theme.css */
   background-color: unset; /* undo theme.css */
 }
